--- a/codeEdit.htm
+++ b/codeEdit.htm
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>SuperCMS</title>
+    <title>W CMS Lite</title>
     <!--HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries [if lt IE 9]>
     <script src="js/html5shiv.js"></script>
     <script src="js/respond.min.js"></script>
@@ -29,7 +29,7 @@
             <!-- breadcrumb路徑 -->
             <div class="breadcrumb">
                 <ul>
-                    <li><a href="light.htm">首頁</a></li>
+                    <li><a href="index.htm">首頁</a></li>
                     <li><a href="#">系統管理</a></li>
                     <li>代碼維護</li>
                 </ul>
@@ -57,16 +57,16 @@
 											<li class="collapsable">
 												<div class="hitarea collapsable-hitarea"></div><span class="folder">htDev</span>
 												<ul id="folder21" class="treeview">
-													<li><a href="codeList?metaId=htDinputType"><span class="file">輸入型式</span></a></li>
-													<li><a href="codeList?metaId=wmiWebType"><span class="file">網站性質</span></a></li>
-													<li><a href="codeList?metaId=wmiLang"><span class="file">語言版本</span></a></li>
+													<li><a href="codeList.htm"><span class="file">輸入型式</span></a></li>
+													<li><a href="codeList.htm"><span class="file">網站性質</span></a></li>
+													<li><a href="codeList.htm"><span class="file">語言版本</span></a></li>
 												</ul>
 											</li>
 											<li class="collapsable">
 												<div class="hitarea collapsable-hitarea"></div><span class="folder">MetaData</span>
 												<ul id="folder21" class="treeview">
-													<li><a href="codeList?metaId=catType"><span class="file">行政分類</span></a></li>
-													<li><a href="codeList?metaId=DCDataType"><span class="file">DC資料類型</span></a></li>
+													<li><a href="codeList.htm"><span class="file">行政分類</span></a></li>
+													<li><a href="codeList.htm"><span class="file">DC資料類型</span></a></li>
 													<li><a href="#"><span class="file">主題分類</span></a></li>
 													<li><a href="#"><span class="file">施政分類</span></a></li>
 													<li><a href="#"><span class="file">服務分類</span></a></li>
@@ -126,6 +126,7 @@
 											<button class="btn btn-submit">編修儲存</button>
 											<button class="btn btn-delete">刪除</button>
 											<button class="btn btn-reset">清除重填</button>
+                                            <button class="btn" onclick="window.location.href='codeList.htm';">返回代碼條列</button>
                                         </div>								
 									</div>
                                 </div>
