--- a/codeList.htm
+++ b/codeList.htm
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>SuperCMS</title>
+    <title>W CMS Lite</title>
     <!--HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries [if lt IE 9]>
     <script src="js/html5shiv.js"></script>
     <script src="js/respond.min.js"></script>
@@ -29,7 +29,7 @@
             <!-- breadcrumb路徑 -->
             <div class="breadcrumb">
                 <ul>
-                    <li><a href="light.htm">首頁</a></li>
+                    <li><a href="index.htm">首頁</a></li>
                     <li><a href="#">系統管理</a></li>
                     <li>代碼維護</li>
                 </ul>
@@ -57,16 +57,16 @@
 											<li class="collapsable">
 												<div class="hitarea collapsable-hitarea"></div><span class="folder">htDev</span>
 												<ul id="folder21" class="treeview">
-													<li><a href="codeList?metaId=htDinputType"><span class="file">輸入型式</span></a></li>
-													<li><a href="codeList?metaId=wmiWebType"><span class="file">網站性質</span></a></li>
-													<li><a href="codeList?metaId=wmiLang"><span class="file">語言版本</span></a></li>
+													<li><a href="codeList.htm"><span class="file">輸入型式</span></a></li>
+													<li><a href="codeList.htm"><span class="file">網站性質</span></a></li>
+													<li><a href="codeList.htm"><span class="file">語言版本</span></a></li>
 												</ul>
 											</li>
 											<li class="collapsable">
 												<div class="hitarea collapsable-hitarea"></div><span class="folder">MetaData</span>
 												<ul id="folder21" class="treeview">
-													<li><a href="codeList?metaId=catType"><span class="file">行政分類</span></a></li>
-													<li><a href="codeList?metaId=DCDataType"><span class="file">DC資料類型</span></a></li>
+													<li><a href="codeList.htm"><span class="file">行政分類</span></a></li>
+													<li><a href="codeList.htm"><span class="file">DC資料類型</span></a></li>
 													<li><a href="#"><span class="file">主題分類</span></a></li>
 													<li><a href="#"><span class="file">施政分類</span></a></li>
 													<li><a href="#"><span class="file">服務分類</span></a></li>
@@ -129,7 +129,7 @@
                                         </form>
                                     </div>
                                     <div class="quick_btn">
-                                        <button class="btn btn-orange"><i class="i_add"></i>新增</button>
+                                        <button class="btn btn-orange" onclick="window.location.href='codeAdd.htm';"><i class="i_add"></i>新增</button>
                                     </div>
                                 </div>
                                 <div class="_content">
@@ -159,7 +159,7 @@
                                                 <tr>
                                                     <td class="hasInput"><input type="checkbox"></td>
                                                     <td class="num">1</td>
-                                                    <td><a href="codeEdit.htm?metaId=htDinputType&code=text">text</a></td>
+                                                    <td><a href="codeEdit.htm">codeText</a></td>
                                                     <td>文字框</time></td>
                                                     <td>1</td>
                                                     <td>
@@ -170,7 +170,7 @@
                                                                 <ul>
                                                                     <li>
                                                                         <button class="btn">
-                                                                            <i class="i_edit"></i>編輯 </button></li>
+                                                                            <i class="i_edit" onclick="window.location.href='codeEdit.htm';"></i>編輯 </button></li>
                                                                     <li>
                                                                         <button class="btn btn-red">
                                                                             <i class="i_trash"></i>刪除 </button>
@@ -183,7 +183,7 @@
                                                 <tr>
                                                     <td class="hasInput"><input type="checkbox"></td>
                                                     <td class="num">1</td>
-                                                    <td><a href="codeEdit.htm?metaId=htDinputType&code=textarea">textarea</a></td>
+                                                    <td><a href="codeEdit.htm">textarea</a></td>
                                                     <td>多行文字框</time></td>
                                                     <td>2</td>
                                                     <td>
