--- a/index_list.html
+++ b/index_list.html
@@ -95,15 +95,17 @@
                 <tbody>
                     <tr>
                         <td></td>
-                        <td>首頁</td>
+                        <td>首頁：儀錶板</td>
                         <td><a href="index.htm" target="_blank"></a></td>
                     </tr>
                     <tr>
                         <td></td>
-                        <td>資料管理：資料上稿</td>
+                        <td>系統開發：代碼維護</td>
                         <td>
                             <ul>
-                                <li> <a href="" target="_blank"></a></li>
+                                <li>代碼條列 <a href="codeList.htm" target="_blank"></a></li>
+                                <li>代碼新增 <a href="codeAdd.htm" target="_blank"></a></li>
+                                <li>代碼編修 <a href="codeEdit.htm" target="_blank"></a></li>
                             </ul>
                         </td>
                     </tr>
@@ -116,38 +118,23 @@
                             </ul>
                         </td>
                     </tr>
-                </tbody>
-            </table>
-        </div>
-
-        <div class="table_wrapper">
-            <table>
-              <caption>Chris版本</caption>
-                <thead>
-                    <tr>
-                        <th class="num">編號</th>
-                        <th>頁面名稱</th>
-                        <th>檔案名稱</th>
-                    </tr>
-                </thead>
-                <tbody>
                    <tr>
                         <td></td>
-                        <td></td>
-                        <td></td>
+                        <td>Chris版備份</td>
+                        <td><a href="Chris/index.htm" target="_blank"></a></td>
                     </tr>
                 </tbody>
             </table>
-
         </div>
+
 
 
     </div>
     <a href="javascript:;" class="scrollToTop" >回頁首</a>
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="vendor/jquery.easing.min.js"></script>
-    <script src="js/hyui.js"></script>
-    <script src="js/customize.js"></script>
+    <!--script src="js/hyui.js"></script>
+    <script src="js/customize.js"></script-->
     <script>
     $(function() {
         $('tbody').find('a').each(function(index, el) {
