--- a/catTreeAdd.htm
+++ b/catTreeAdd.htm
@@ -29,7 +29,7 @@
             <!-- breadcrumb路徑 -->
             <div class="breadcrumb">
                 <ul>
-                    <li><a href="light.htm">首頁</a></li>
+                    <li><a href="index.htm">首頁</a></li>
                     <li><a href="#">網站管理</a></li>
                     <li>架構管理</li>
                 </ul>
