--- a/ugrpList.htm
+++ b/ugrpList.htm
@@ -30,7 +30,7 @@
             <!-- breadcrumb路徑 -->
             <div class="breadcrumb">
                 <ul>
-                    <li><a href="light.htm">首頁</a></li>
+                    <li><a href="index.htm">首頁</a></li>
                     <li><a href="#">系統管理</a></li>
                     <li>權限群組</li>
                 </ul>
