--- a/index_list.html
+++ b/index_list.html
@@ -111,10 +111,12 @@
                     </tr>
                     <tr>
                         <td></td>
-                        <td></td>
+                        <td>系統管理：權限群組</td>
                         <td>
                             <ul>
-                                <li> <a href="" target="_blank"></a></li>
+                                <li>群組清單 <a href="ugrpList.htm" target="_blank"></a></li>
+                                <li>群組編輯/新增 <a href="ugrpEdit.htm" target="_blank"></a></li>
+                                <li>群組AP設定 <a href="ugrpAp.htm" target="_blank"></a></li>
                             </ul>
                         </td>
                     </tr>
