--- a/ugrpAp.htm
+++ b/ugrpAp.htm
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>SuperCMS</title>
+    <title>W CMS Lite</title>
     <!--HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries [if lt IE 9]>
     <script src="js/html5shiv.js"></script>
     <script src="js/respond.min.js"></script>
@@ -39,7 +39,13 @@
             <div class="grid">
                 <div class="container">
                     <div class="title">
-                        <h2>權限設定</h2>
+                        <h2>權限設定 - 權限群組名稱</h2>
+                        <div class="function">
+                            <ul>
+                                <li><a href="ugrpEdit.htm">回權限群組</a></li>
+                                <li><a href="ugrpList.htm">回條列頁</a></li>
+                            </ul>
+                        </div>
                    </div>
 
                     <!-- flex-12 -->
