--- a/ugrpEdit.htm
+++ b/ugrpEdit.htm
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>SuperCMS</title>
+    <title>W CMS Lite</title>
     <!--HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries [if lt IE 9]>
     <script src="js/html5shiv.js"></script>
     <script src="js/respond.min.js"></script>
@@ -40,10 +40,9 @@
                 <div class="container">
                     <div class="title">
                         <h2>編輯權限群組</h2>
-                        <button class="btn btn-primary btn-adv">
                          <div class="function">
                             <ul>
-                                <li ><a href="ugrpAp.htm?ugrpId={ugrpId}">後台權限</a></li>
+                                <li ><a href="ugrpAp.htm">編修權限</a></li>
                                 <li class="icon_back"><a href="javascript: history.back();">回上一頁</a></li>
                             </ul>
                         </div>
