--- a/codeList.htm
+++ b/codeList.htm
@@ -169,8 +169,8 @@
                                                             <div class="dropdown-content">
                                                                 <ul>
                                                                     <li>
-                                                                        <button class="btn">
-                                                                            <i class="i_edit" onclick="window.location.href='codeEdit.htm';"></i>編輯 </button></li>
+                                                                        <button class="btn" onclick="window.location.href='codeEdit.htm';">
+                                                                            <i class="i_edit"></i>編輯 </button></li>
                                                                     <li>
                                                                         <button class="btn btn-red">
                                                                             <i class="i_trash"></i>刪除 </button>
@@ -194,7 +194,7 @@
                                                                 <ul>
                                                                     <li>
                                                                         <button class="btn">
-                                                                            <i class="i_edit"></i>編輯 </button></li>
+                                                                            <i class="i_edit" onclick="window.location.href='codeEdit.htm';"></i>編輯 </button></li>
                                                                     <li>
                                                                         <button class="btn btn-red">
                                                                             <i class="i_trash"></i>刪除 </button>
