--- a/userEdit.htm
+++ b/userEdit.htm
@@ -40,10 +40,9 @@
                 <div class="container">
                     <div class="title">
                         <h2>編輯使用者</h2>
-                        <button class="btn btn-primary btn-adv">
                          <div class="function">
                             <ul>
-                                <li ><a href="ctUserSet.html?uid={userId}">上稿權限</a></li>
+                                <li ><a href="#">上稿權限</a></li>
                                 <li class="icon_back"><a href="javascript: history.back();">回上一頁</a></li>
                             </ul>
                         </div>
