--- a/index_list.html
+++ b/index_list.html
@@ -120,7 +120,17 @@
                             </ul>
                         </td>
                     </tr>
-                   <tr>
+                    <tr>
+                        <td></td>
+                        <td>系統管理：使用者</td>
+                        <td>
+                            <ul>
+                                <li>使用者清單 <a href="userList.htm" target="_blank"></a></li>
+                                <li>使用者編輯/新增 <a href="userEdit.htm" target="_blank"></a></li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
                         <td></td>
                         <td>Chris版備份</td>
                         <td><a href="Chris/index.htm" target="_blank"></a></td>
