--- a/index_list.html
+++ b/index_list.html
@@ -78,7 +78,7 @@
 <body>
     <div class="demo_wrap">
         <h1><a href="index_list.html">W CMS管理端</a></h1>
-        <div class="btn_grp">
+        <div class="btn_grp" style="float:right;">
             <a href="https://github.com/LiuCC910/CMS_UI" class="btn">切版檔案更新請按此下載</a>
         </div>
         <hr style="clear:both">
@@ -129,6 +129,26 @@
                                 <li>使用者編輯/新增 <a href="userEdit.htm" target="_blank"></a></li>
                             </ul>
                         </td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>系統管理：組織架構</td>
+                        <td>
+                            <ul>
+                                <li>組織架構編輯 <a href="deptEdit.htm" target="_blank"></a></li>
+                                <li>組織架構新增 <a href="deptAdd.htm" target="_blank"></a></li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>系統管理：登入記錄查詢</td>
+                        <td><a href="userLogList.htm" target="_blank"></a></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>系統管理：個人資料管理</td>
+                        <td><a href="userUpdate.htm" target="_blank"></a></td>
                     </tr>
                     <tr>
                         <td></td>
