--- a/userLogList.htm
+++ b/userLogList.htm
@@ -115,7 +115,7 @@
                                         <table class="table_hover">
                                             <thead>
                                                 <tr>
-                                                    <th>
+                                                    <th class="sort down">
                                                         <a href="#">帳號<i class="i_sort"></i>
                                                         </a>
                                                     </th>
